testsuite/tests/overloadedrecflds/should_compile/T13352_B.hs
module T13352_B where
  data T = MkT { foo :: Int }
