testsuite/tests/overloadedrecflds/should_fail/HasFieldFail01_A.hs
module HasFieldFail01_A where

data T = MkT { foo :: Int }
